# otx-payment-demo

./: .gitignore  .gitmodules  Cargo.toml  README.md
aggregator/: Cargo.toml
aggregator/src/: lib.rs
common-lib/: Cargo.toml
common-lib/src/: ckb_cli.rs  lib.rs
common-lib/src/client/: ckb_cli_client.rs  ckb_client.rs  mercury_client.rs  mod.rs
common-lib/src/instruction/: mercury.rs  mod.rs
dev_chain/: devnet_config.toml
open-tx/: Cargo.toml
open-tx/schemas/: opentx.mol
open-tx/src/: error.rs  lib.rs
open-tx/src/jsonrpc_types/: mod.rs  opentx.rs  tx_view.rs
open-tx/src/types/: mod.rs
otx-format/src/: error.rs
otx-format/src/jsonrpc_types/: opentx.rs  tx_view.rs
otx-format/src/jsonrpc_types/constant/: key_type.rs
otx-plugin-protocol/: Cargo.toml
otx-plugin-protocol/examples/: demo.rs
otx-plugin-protocol/src/: lib.rs
otx-pool/: Cargo.toml
otx-pool/src/: error.rs  lib.rs
otx-pool/src/otx_pool/: mod.rs
otx-pool/src/plugin/: manager.rs  mod.rs  plugin_proxy.rs  service.rs
otx-pool/src/rpc/: impl.rs  mod.rs
otx-service/: Cargo.toml
otx-service/src/: main.rs
otx-transaction-pool/: Cargo.toml
otx-transaction-pool/src/rpc/: mod.rs
payment_service/: Cargo.toml
payment_service/src/: main.rs
service/: Cargo.toml
service/src/: lib.rs  main.rs
service_payment/: Cargo.toml
service_payment/src/: main.rs
src/: const_definition.rs  help.rs  main.rs
src/service/: mod.rs
src/tests/: mod.rs  open_tx.rs  sdk_open_tx_examples.rs  service_rpc.rs  transfer_udt.rs  user_case.rs
src/tests/open_tx/: mod.rs  sighash.rs
src/tests/otx_service_test/: mod.rs
src/utils/: build_tx.rs  ckb_cli.rs  instruction.rs  mercury_client_rpc.rs  mod.rs
src/utils/address/: mod.rs  omni.rs  secp.rs
src/utils/instruction/: mercury.rs  mod.rs
src/utils/lock/: acp.rs  mod.rs  omni.rs  secp.rs
src/utils/signer/: mod.rs
src/wallet/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/client/: service_client.rs
wallet/: Cargo.toml
wallet/src/: lib.rs
