[package]
name = "otx-demo"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
ckb-crypto = "0.105"
ckb-hash = "0.105"
ckb-jsonrpc-types = "0.105"
ckb-sdk = { git = "https://github.com/EthanYuan/ckb-sdk-rust.git", branch = "opentx_sign_tx_ethan"}
ckb-types = "0.105"
inventory = "0.2"
secp256k1 = { version = "0.24", features = ["recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

common = { path = "./mercury/common"}
core-rpc-types = { path = "./mercury/core/rpc/types"}

otx-format = { path = "./open-transaction-pool/otx-format" }

aggregator = { path = "./aggregator" }
utils = { path = "./utils" }
wallet = { path = "./wallet"}

[workspace]
members = [
    "aggregator",
    "utils",
    "wallet",
]
exclude = [
    "./mercury", 
    "./open-transaction-pool",
]
