[package]
name = "otx-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-jsonrpc-types = "0.105"
ckb-types = "0.105"
dashmap = "5.4.0"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-server-utils = "18.0"

open-tx = { path = "../open-tx" }
