[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ckb-crypto = "0.105"
ckb-hash = "0.105"
ckb-jsonrpc-types = "0.105"
ckb-sdk = { git = "https://github.com/EthanYuan/ckb-sdk-rust.git", branch = "opentx_sign_tx_ethan"}
ckb-types = "0.105"
secp256k1 = { version = "0.24", features = ["recovery"] }

common-lib = { path = "../common-lib"}
